--- a/app/views/users/profile/_follow_button.html.erb
+++ b/app/views/users/profile/_follow_button.html.erb
@@ -5,7 +5,7 @@
       <%= button_tag( class: "btn follow-button-normal") do %>
         <%= image_tag "icons/heart_icon.png", height: '17', width: '19', class: 'mb-1' %><span> Like</span>
       <% end %>
-      <p class="btn follow-button-normal"><%= @user.followers.count %></p>
+      <span class="btn follow-button-normal"><%= @user.followers.count %></span>
     </div>
   <% end %>
 <% else %>
@@ -13,6 +13,6 @@
     <%= link_to new_user_registration_path, class: "btn follow-button-normal" do %>
       <%= image_tag "icons/heart_icon.png", height: '17', width: '19', class: 'mb-1' %> Like
     <% end %>
-    <p class="btn follow-button-normal"><%= @user.followers.count %></p>
+    <span class="btn follow-button-normal"><%= @user.followers.count %></span>
   </div>
 <% end %>
