--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,8 +1,12 @@
+$backgroundColor: #EEEEEE;
 $secondaryColor: #C2C2C2;
 $highlightColor: #F514A6;
+$darkTextColor: #191A1A;
+
+$linkColor: #1FB6BC;
 $lightLinkColor: white;
 $darkLinkColor: #191A1A;
-$lightSubTextColor: #C2C2C2;
+$lightSubTextColor: #868F9F;
 $primaryTextColor: #343234;
 $lightTextColor: white;
 $warningColor: #ffc107;
