--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <%= link_to image_tag('arelplane.png', class: 'd-inline-block align-top', height: '40', width: '40'), root_path, class: 'navbar-brand' %>
+  <%#= link_to image_tag('arelplane.png', class: 'd-inline-block align-top', height: '40', width: '40'), root_path, class: 'navbar-brand' %>
   <%= link_to 'ARELPLANE', root_path, class: 'navbar-brand' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -14,13 +14,16 @@
     <ul class="navbar-nav">
       <li class="nav-item active">
         <% if current_user %>
-        <%= link_to 'MANAGE FLIGHTS', flights_path, class: 'nav-link' %>
+        <%= link_to 'Profile', user_path(current_user.id), class: 'nav-link' %>
       </li>
       <li class="nav-item active">
-        <%= link_to 'UPLOAD INSTRUCTIONS', upload_instructions_path, class: 'nav-link' %>
+        <%= link_to 'Manage Flights', flights_path, class: 'nav-link' %>
       </li>
       <li class="nav-item active">
-        <%= link_to 'LOG OUT', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+        <%= link_to 'Upload Instructions', upload_instructions_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item active">
+        <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
         <% end %>
       </li>
       <% if current_user %>
