--- a/app/views/user_followings/create.js.erb
+++ b/app/views/user_followings/create.js.erb
@@ -1,1 +1,1 @@
-$(".follow_button").html("<%= escape_javascript(render('users/profile/unfollow_button')) %>");
+$(".follow_button<%= @user.id %>").html("<%= escape_javascript(render('users/profile/unfollow_button', user: @user)) %>");
