--- a/app/views/users/home_page/_side_bar.html.erb
+++ b/app/views/users/home_page/_side_bar.html.erb
@@ -1,48 +1,2 @@
-<%= link_to user_path(current_user) do %>
-  <div class="card m-4 user_card">
-    <%= image_tag 'demo-img.png', class: 'card-img-top', alt: 'Map image'%>
-    <div class="card-body">
-      <h4 class="card-title name"><%= current_user.name %></h4>
-      <p class="subtitle">Joined <%= current_user.created_at.strftime('%B %e, %Y') %></p>
-      <hr>
-      <div class="row text-center">
-        <div class="col-4 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= current_user.flights.count %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Flights
-            </div>
-          </div>
-        </div>
-        <div class="col-4 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= current_user.num_airports %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Airports
-            </div>
-          </div>
-        </div>
-        <div class="col-4 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= current_user.total_flight_hours %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Hours
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-<% end %>
+<%= render 'users/home_page/user_card' %>
+<%= render 'users/home_page/flights_leaderboard' %>
