some more styling

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,4 +1,6 @@
 $backgroundColor: #EEEEEE;
+$darkBackgroundColor: #191A1A;
+
 $secondaryColor: #C2C2C2;
 $highlightColor: #F514A6;
 $darkTextColor: #191A1A;
@@ -13,4 +15,3 @@ $warningColor: #ffc107;
 $secondaryButtonColor: #7F7F7F;
 
 $homeSidebarBackground: white;
-$feedBackground: #343234;
