--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -2,6 +2,7 @@
 @import "fonts";
 
 .home_page {
+  background-color: $backgroundColor;
   font-family: $baseFont;
   #sticky-sidebar {
     z-index: 0;
