--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,6 +1,6 @@
 <%= title "Arelplane | flights" %>
 
-<div class="container-fluid">
+<div class="container-fluid flights">
   <div class="row">
     <div class="col-12">
       <div class="row">
@@ -44,7 +44,7 @@
             <%= nonconforming_flights.count %> flights have identifiers that aren't in our system 😲
           </h4>
           <p>
-            Cross check them with your logbook. If we're missing an identifier, send us <a href="http://m.me/arelplane" target="_blank">a message</a>. If you mistyped an identifier, just update the entry below, or fix it in your logbook and re upload it.
+            Cross check them with your logbook. If we're missing an identifier, send us <a href="http://m.me/arelplane" target="_blank">a message</a>. If you mistyped an identifier, just update the entry below, or fix it in your logbook and re-upload it.
           </p>
 
           <table class='table table-striped table-bordered'>
@@ -96,7 +96,7 @@
         <% end %>
       </div>
 
-      <table class='table table-striped table-inverse table-bordered'>
+      <table class='table table-striped table-dark table-bordered'>
         <thead>
           <tr>
             <th>Flight date</th>
