--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -12,7 +12,7 @@ html {
 
 body {
   font-family: $baseFont;
-  background-color: $backgroundColor;
+  background-color: $darkBackgroundColor;
 }
 
 a {
