--- a/app/views/users/profile/_side_bar.html.erb
+++ b/app/views/users/profile/_side_bar.html.erb
@@ -6,12 +6,40 @@
         <%= link_to image_tag('settings.png', height: '23', width: '23'), edit_user_registration_path, class: 'ml-2' %>
       <% end %>
     </div>
-    <div class='sub-text pl-3'>
+    <div class='sub-text joined-date pl-3'>
       Joined <%= @user.created_at.strftime('%B %e, %Y') %>
     </div>
-    <div class="sub-text pl-3 mb-5 mt-2">
+    <div class="sub-text pl-3 mt-2">
       <%= render 'users/profile/follow_form', user: @user %>
     </div>
+    <hr class="ml-3 mr-3">
+    <div class="row top-values ml-1 mr-2">
+      <div class="col-4">
+        <div class='value'>
+          <%= @user.top_region || 'No Flights' %>
+        </div>
+        <div class='title'>
+          Top Region
+        </div>
+      </div>
+      <div class="col-4">
+        <div class='value'>
+          <%= @user.top_location || 'No Flights' %>
+        </div>
+        <div class='title'>
+          Top Airport
+        </div>
+      </div>
+      <div class="col-4">
+        <div class='value'>
+          <%= @user.top_aircraft || 'Nothing Yet' %>
+        </div>
+        <div class='title'>
+          Top Aircraft
+        </div>
+      </div>
+    </div>
+    <hr class="ml-3 mr-3 mb-5">
   </div>
 </div>
 <div class='row'>
