update profile page

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -15,3 +15,5 @@ $warningColor: #ffc107;
 $secondaryButtonColor: #7F7F7F;
 
 $homeSidebarBackground: white;
+$profileSidebarBackground: #EDEDED;
+$flagBorder: #979797;
