--- a/app/views/users/profile/_side_bar.html.erb
+++ b/app/views/users/profile/_side_bar.html.erb
@@ -39,88 +39,48 @@
         </div>
       </div>
     </div>
-    <hr class="ml-3 mr-3 mb-5">
-  </div>
-</div>
-<div class='row'>
-  <div class='col-12'>
-    <div class='float-right mr-3'>
-      <div class='light-header align-right'>
-        <%= @user.top_region || 'No Flights' %>
-      </div>
-      <div class='light-sub-text align-right'>
-        Top State/Region
-      </div>
-    </div>
-  </div>
-</div>
-<div class='row mt-3'>
-  <div class='col-12'>
-    <div class='float-right mr-3'>
-      <div class='light-header align-right'>
-        <%= @user.top_location || 'No Flights' %>
-      </div>
-      <div class='light-sub-text align-right'>
-        Top Airport
-      </div>
-    </div>
-  </div>
-</div>
-<div class='row mt-3'>
-  <div class='col-12'>
-    <div class='float-right mr-3'>
-      <div class='light-header align-right'>
-        <%= @user.top_aircraft || 'Nothing Yet' %>
-      </div>
-      <div class='light-sub-text align-right'>
-        Top Aircraft
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row mt-3"></div>
-<div class='row'>
-  <div class='col-12'>
-    <div id='mid-background-flag'>
-      <div id='background-flag-text'>
-        <div class='row mt-3'>
-          <div class='col-6'>
-            <div class='header-text'>
-              <%= number_with_delimiter(@user.flights.count, delimiter: ',') || 'No Flights' %>
-            </div>
-            <div class='sub-text'>
-              Flights
-            </div>
-          </div>
-          <div class='col-6'>
-            <div class='header-text'>
-              <%= number_with_delimiter(@user.num_airports, delimiter: ',') %>
-            </div>
-            <div class='sub-text'>
-              Airports
-            </div>
-          </div>
+    <hr class="ml-3 mr-3">
+    <div class="row stats ml-1 mr-2 mb-5 text-center">
+      <div class="col-3">
+        <div class="number">
+          <%= number_with_delimiter(@user.flights.count, delimiter: ',') || 'No Flights' %>
         </div>
-        <div class='row'>
-          <div class='col-6'>
-            <div class='header-text'>
-              <%= number_with_delimiter(@user.total_flight_hours, delimiter: ',') %>
-            </div>
-            <div class='sub-text'>
-              Hours
-            </div>
-          </div>
-          <div class='col-6'>
-            <div class='header-text'>
-              <%= number_with_delimiter(@user.num_regions, delimiter: ',') %>
-            </div>
-            <div class='sub-text'>
-              Regions
-            </div>
-          </div>
+        <div class="title">
+          Flights
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="number">
+          <%= number_with_delimiter(@user.num_airports, delimiter: ',') %>
+        </div>
+        <div class="title">
+          Airports
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="number">
+          <%= number_with_delimiter(@user.num_regions, delimiter: ',') %>
+        </div>
+        <div class="title">
+          Regions
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="number">
+          <%= number_with_delimiter(@user.total_flight_hours, delimiter: ',') %>
+        </div>
+        <div class="title">
+          Hours
         </div>
       </div>
     </div>
+  </div>
+</div>
+<div class="row pl-3 mt-3">
+  <div class="col-12">
+    <p class="recent-updates">
+      RECENT UPDATES
+    </p>
   </div>
 </div>
 <div class='row mt-5 mb-5 align-center'>
