--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -34,9 +34,25 @@
       }
     }
     .recent-updates {
-      font-size: 1rem;
-      font-weight: $extraBold;
-      color: $primaryTextColor;
+      .title {
+        font-size: 1rem;
+        font-weight: $extraBold;
+        color: $primaryTextColor;
+      }
+      .entry {
+        font-size: 1rem;
+        font-weight: $light;
+        color: $primaryTextColor;
+      }
+      .name {
+        font-weight: $extraBold;
+        color: $linkColor;
+      }
+      .date {
+        font-size: 0.875rem;
+        font-weight: $light;
+        color: $lightSubTextColor;
+      }
     }
   }
 }
