--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -89,3 +89,27 @@
     }
   }
 }
+
+@media (max-width: 767px) {
+  .home_page {
+    #main_feed {
+      min-height: 100vh;
+      .feed_card {
+        .date {}
+        .name {
+          font-size: 1.2rem;
+        }
+        .flight-count {}
+        .stats {
+          .value {
+            font-size: 1.2rem;
+          }
+          .heading {
+            font-size: 0.8rem;
+          }
+        }
+        .link_section {}
+      }
+    }
+  }
+}
