--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class='container-fluid home_page'>
   <div class='row'>
-    <div class='col-md-3 col-12 d-md-none remove-lr-padding' id='sticky-sidebar'>
+    <div class='col-lg-3 col-md-4 col-12 remove-lr-padding' id='sticky-sidebar'>
       <%= render 'users/home_page/side_bar' %>
     </div>
     <div class='col-md-6 col-12 remove-lr-padding mt-4' id='main_feed'>
