--- a/app/views/users/home_page/_main_feed.html.erb
+++ b/app/views/users/home_page/_main_feed.html.erb
@@ -6,18 +6,18 @@
     <div class="card-body">
       <span class="date"><%= time_ago_in_words(user.datetime_of_last_flight) %> ago</span>
       <div class="row">
-        <div class="col-8">
+        <div class="col-lg-8 col-12">
           <h4 class="card-title name"><%= user.name %> <span class="flight-count">added <%= pluralize(number_with_delimiter(user.lastest_upload.count), "new flight") %> to their Map.</span></h4>
         </div>
-        <div class="col-4">
-          <div class="float-right">
+        <div class="col-lg-4 col-12">
+          <div class="float-lg-right">
             <%= render 'users/profile/follow_form', user: user %>
           </div>
         </div>
       </div>
       <hr>
-      <div class="row text-center">
-        <div class="col-2 stats">
+      <div class="row text-center text-nowrap">
+        <div class="col-lg-2 col-3 stats">
           <div class="row value">
             <div class="col-12">
               <%= number_with_delimiter(user.flights.count) %>
@@ -29,7 +29,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 stats">
+        <div class="col-lg-2 col-3 stats">
           <div class="row value">
             <div class="col-12">
               <%= number_with_delimiter(user.num_airports) %>
@@ -41,7 +41,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 stats">
+        <div class="col-lg-2 col-3 stats">
           <div class="row value">
             <div class="col-12">
               <%= number_with_delimiter(user.total_flight_hours) %>
@@ -53,7 +53,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 stats">
+        <div class="col-lg-2 col-3 stats">
           <div class="row value">
             <div class="col-12">
               <%= number_with_delimiter(user.num_regions) %>
