--- a/app/views/users/home_page/_user_card.html.erb
+++ b/app/views/users/home_page/_user_card.html.erb
@@ -1,13 +1,13 @@
-<div class="card m-4 user_card">
+<div class="card m-1 m-md-4 user_card">
   <%#= image_tag 'demo-img.png', class: 'card-img-top', alt: 'Map image'%>
   <div class="card-body">
     <h4 class="card-title name"><%= current_user.name %></h4>
     <p class="subtitle">Joined <%= current_user.created_at.strftime('%B %e, %Y') %></p>
     <hr>
-    <div class="row text-center">
+    <div class="row text-center text-nowrap">
       <div class="col-4 stats">
         <div class="row value">
-          <div class="col-12">
+          <div class="col-12 text-nowrap">
             <%= current_user.flights.count %>
           </div>
         </div>
@@ -19,7 +19,7 @@
       </div>
       <div class="col-4 stats">
         <div class="row value">
-          <div class="col-12">
+          <div class="col-12 text-nowrap">
             <%= current_user.num_airports %>
           </div>
         </div>
@@ -31,7 +31,7 @@
       </div>
       <div class="col-4 stats">
         <div class="row value">
-          <div class="col-12">
+          <div class="col-12 text-nowrap">
             <%= current_user.total_flight_hours %>
           </div>
         </div>
