--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,20 +12,20 @@
     <ul class="navbar-nav mr-auto">
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item active <%= 'underline' if current_page?(username_path(current_user.username)) %>">
-        <% if current_user %>
-        <%= link_to 'Profile', user_path(current_user.id), class: 'nav-link' %>
-      </li>
-      <li class="nav-item active <%= 'underline' if current_page?(flights_path) %>">
-        <%= link_to 'Manage Flights', flights_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item active <%= 'underline' if current_page?(upload_instructions_path) %>">
-        <%= link_to 'Upload Instructions', upload_instructions_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item active">
-        <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-        <% end %>
-      </li>
+      <% if current_user %>
+        <li class="nav-item active <%= 'underline' if current_page?(username_path(current_user.try(:username))) %>">
+          <%= link_to 'Profile', user_path(current_user.id), class: 'nav-link' %>
+        </li>
+        <li class="nav-item active <%= 'underline' if current_page?(flights_path) %>">
+          <%= link_to 'Manage Flights', flights_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item active <%= 'underline' if current_page?(upload_instructions_path) %>">
+          <%= link_to 'Upload Instructions', upload_instructions_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+        </li>
+      <% end %>
       <% if current_user %>
         <li class="nav-item active">
           <button href="#" data-toggle='modal' data-target='#logbookUploadModal' class='btn btn-primary'>Add Flights</button>
