nowrap on the region, airport, and aircraft on profile

--- a/app/views/users/profile/_side_bar.html.erb
+++ b/app/views/users/profile/_side_bar.html.erb
@@ -13,7 +13,7 @@
       <%= render 'users/profile/follow_form', user: @user %>
     </div>
     <hr class="ml-3 mr-3">
-    <div class="row top-values ml-1 mr-2">
+    <div class="row top-values ml-1 mr-2 text-nowrap">
       <div class="col-4">
         <div class='value'>
           <%= @user.top_region || 'No Flights' %>
