make names clickable

--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -61,7 +61,7 @@
         font-weight: $regular;
         color: $lightSubTextColor;
       }
-      .name {
+      .name a {
         font-size: 1.5rem;
         font-weight: $black;
         color: $primaryTextColor;
