add pagination as half step to adding infinite scroll

--- a/app/views/pages/upload_instructions.html.erb
+++ b/app/views/pages/upload_instructions.html.erb
@@ -49,7 +49,7 @@
       Because we support the entire world, you'll need to use ICAO identifiers. A lot of IATA identifiers have the same name as navagation aids, like VORs or NDBs, so your map will look strange if you try to use IATA codes or shorthand codes.
     </p>
     <p>
-      If you fly from a strip that isn't on the site, send us a message from your profile page with the info on the strip and we'll add it. Even if it's a private farm or back country strip.
+      If you fly from a strip that isn't on the site, us <a href="http://m.me/arelplane" target="_blank">a message</a> with the info on the strip and we'll add it. Even if it's a private farm or back country strip.
     </p>
     <p>
       If you use a logbook that isn't supported yet, go to your profile page and click the "Message Us" button and request it. New logbooks are added within a day usually.
