fix out of date link

--- a/app/views/users/home_page/_main_feed.html.erb
+++ b/app/views/users/home_page/_main_feed.html.erb
@@ -67,7 +67,7 @@
       </div>
     </div>
     <ul class="list-group list-group-flush">
-      <%= link_to user_path(user) do %>
+      <%= link_to username_path(user.username) do %>
         <li class="list-group-item link_section">
           <span>
             View their Map
