close #81. add remember me box to login form in modal

--- a/app/views/pages/_login_modal.html.erb
+++ b/app/views/pages/_login_modal.html.erb
@@ -15,6 +15,11 @@
             <%= form.email_field :email, placeholder: 'email', class: 'form-control' %>
             <%= form.label :password %>
             <%= form.password_field :password, placeholder: 'password', class: 'form-control' %>
+
+            <% if devise_mapping.rememberable? -%>
+              <%= form.check_box :remember_me %>
+              <%= form.label :remember_me %>
+            <% end -%>
           </div>
         </div>
         <div class="modal-footer">
