--- a/app/views/pages/_login_modal.html.erb
+++ b/app/views/pages/_login_modal.html.erb
@@ -16,7 +16,8 @@
             <%= form.label :password %>
             <%= form.password_field :password, placeholder: 'password', class: 'form-control' %>
 
-
+            <%= form.check_box :remember_me %>
+            <%= form.label :remember_me %>
           </div>
         </div>
         <div class="modal-footer">
