--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -91,3 +91,13 @@ h6 {
   padding-right: 0;
   padding-left: 0;
 }
+
+.number-circle {
+    border-radius: 100%;
+    padding-top: 0.07rem;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+    background: transparent;
+    border: 2px solid $primaryTextColor;
+    text-align: center;
+}
