--- a/app/views/users/home_page/_main_feed.html.erb
+++ b/app/views/users/home_page/_main_feed.html.erb
@@ -1,84 +1,20 @@
-<% @feed.each do |user| %>
-  <% if user == current_user then next end %>
-  <div class="card mb-4 feed_card">
-    <%#= image_tag 'demo-img.png', class: 'card-img-top', alt: 'Map image'%>
-    <div class="card-body">
-      <span class="date"><%= time_ago_in_words(user.datetime_of_last_flight) %> ago</span>
-      <div class="row">
-        <div class="col-lg-8 col-12">
-          <h4 class="card-title name"><%= link_to user.name, username_path(user.username) %> <span class="flight-count">added <%= pluralize(number_with_delimiter(user.lastest_upload.count), "new flight") %> to their Map.</span></h4>
-        </div>
-        <div class="col-lg-4 col-12">
-          <div class="float-lg-right">
-            <%= render 'users/profile/follow_form', user: user %>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="row text-center text-nowrap">
-        <div class="col-lg-2 col-3 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= number_with_delimiter(user.flights.count) %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Flights
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-3 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= number_with_delimiter(user.num_airports) %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Airports
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-3 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= number_with_delimiter(user.total_flight_hours) %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Hours
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-3 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= number_with_delimiter(user.num_regions) %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Regions
-            </div>
-          </div>
-        </div>
-      </div>
+<nav class="nav nav-tabs mb-1" id="myTab" role="tablist">
+  <a class="nav-item nav-link active" id="nav-all-tab" data-toggle="tab" href="#nav-all" role="tab" aria-controls="nav-all" aria-selected="true">Feed</a>
+  <a class="nav-item nav-link" id="nav-followers-tab" data-toggle="tab" href="#nav-followers" role="tab" aria-controls="nav-followers" aria-selected="false">Followers <span class="number-circle"><%= @followers.count %></span></a>
+  <a class="nav-item nav-link" id="nav-following-tab" data-toggle="tab" href="#nav-following" role="tab" aria-controls="nav-following" aria-selected="false">Following <span class="number-circle"><%= @following.count %></span></a>
+</nav>
+<div class="tab-content" id="nav-tabContent">
+  <div class="tab-pane fade" id="nav-following" role="tabpanel" aria-labelledby="nav-following-tab">
+    <div class="row">
+      <%= render 'users/home_page/followings', relationship: :following %>
     </div>
-    <ul class="list-group list-group-flush">
-      <%= link_to username_path(user.username) do %>
-        <li class="list-group-item link_section">
-          <span>
-            View their Map
-          </span>
-          <span class="float-right">
-            <%= image_tag 'icons/chevron_icon.png', width: 12, height: 10 %>
-          </span>
-        </li>
-      <% end %>
-    </ul>
   </div>
-<% end %>
-
-<%= paginate @feed, theme: 'bootstrap4' %>
+  <div class="tab-pane fade show active" id="nav-all" role="tabpanel" aria-labelledby="nav-all-tab">
+    <%= render 'users/home_page/all_users' %>
+  </div>
+  <div class="tab-pane fade" id="nav-followers" role="tabpanel" aria-labelledby="nav-followers-tab">
+    <div class="row">
+      <%= render 'users/home_page/followings', relationship: :followers %>
+    </div>
+  </div>
+</div>
