add last updated to followings cards

--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -68,6 +68,11 @@
         font-weight: $regular;
         color: $lightSubTextColor;
       }
+      .updated {
+        font-size: 1rem;
+        font-weight: $regular;
+        color: $lightSubTextColor;
+      }
       .name a {
         font-size: 1.5rem;
         font-weight: $black;
