change from circle to color on count

--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -62,6 +62,11 @@
       color: $primaryTextColor;
       font-weight: $semiBold;
     }
+    .count {
+      color: $lightSubTextColor;
+      font-weight: $light;
+      margin-left: 0.5rem;
+    }
     .feed_card {
       .date {
         font-size: 1.125rem;
