--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
     <%= render 'vendors/fb_messenger_btn' %>
     <%= render 'layouts/flash_messages' %>
     <%= yield %>
+    <%= render 'layouts/footer' %>
     <%= render 'pages/login_modal' %>
     <%= render 'flights/logbook_upload_modal' %>
   </body>
