--- a/app/views/users/home_page/_followings.html.erb
+++ b/app/views/users/home_page/_followings.html.erb
@@ -1,4 +1,4 @@
-<% instance_variable_get("@#{relationship}").each do |user| %>
+<% objects.each do |user| %>
   <div class="col-12 col-md-6">
     <div class="card mb-4 feed_card">
       <div class="card-body">
