close #69 user is redirected back to whatever page they were on after login

--- a/app/assets/stylesheets/bootstrap-overrides.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.scss
@@ -21,11 +21,16 @@
 .btn-primary:hover {
   background-color: #00E6F0;
   border-color: #00E6F0;
+  color: $lightTextColor;
 }
 
 .btn-primary:disabled {
   background-color: #00E6F0;
   border-color: #00E6F0;
+}
+
+.btn-primary a {
+  color: $lightTextColor;
 }
 
 .container {
