--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,6 @@
     <%= render 'layouts/flash_messages' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
-    <%= render 'pages/login_modal' %>
-    <%= render 'flights/logbook_upload_modal' %>
+    <%= render 'layouts/modals' %>
   </body>
 </html>
