--- a/app/views/users/home_page/_notice_unit.html.erb
+++ b/app/views/users/home_page/_notice_unit.html.erb
@@ -1,3 +1,3 @@
 <div class="alert alert-info" role="alert">
-  Join the new Arelplane <a href="https://www.facebook.com/groups/arelplane" target="_blank">Facebook Group</a>! It's a place to talk about this site, give feedback, request features, ask questions, or do other Arelplane related things.
+  Join the new Pilots of Arelplane <a href="https://www.facebook.com/groups/arelplane" target="_blank">Facebook Group</a>! It's a place to talk about this site, give feedback, request features, ask questions, or do other Arelplane related things.
 </div>
