--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -38,14 +38,17 @@
 
       <% nonconforming_flights = Flight.flights_with_missing_identifiers_for(current_user) %>
       <% if nonconforming_flights.count > 0 && params[:action] != "search" %>
-
-        <div class="alert alert-danger" role="alert">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
           <h4 class="alert-heading">
             <%= nonconforming_flights.count %> flights have identifiers that aren't in our system 😲
           </h4>
           <p>
             Cross check them with your logbook. If we're missing an identifier, send us <a href="http://m.me/arelplane" target="_blank">a message</a>. If you mistyped an identifier, just update the entry below, or fix it in your logbook and re-upload it.
           </p>
+
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
 
           <table class='table table-striped table-bordered'>
             <thead>
